1998-10-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el: Fix my stupid changes.

1998-09-30  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-make-user-agent): Add the value of
	`system-configuration' to Emacs and XEmacs as a comment.

	* lisp/message.el (message-make-user-agent): Fold up the return
	value if the optional arg MAX-COLUMN is specified.

1998-09-29  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-make-user-agent): Make a user-agent
	string without MUA info, if the value of `message-user-agent' is
	nil nor `gnus-inviolable-extended-version' is not exists.

1998-09-28  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/nnmh.el (nnmh-request-accept-article): Insert `Message-ID'
	only if `group' name is neither "queue" nor "draft".
	Fix typo (at 23:25).

	*lisp/message.el (message-send-mail): Add different Message-ID in 
	each message/partial

1998-09-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* texi/gnus-ja.texi: Sync up with Semi-gnus 6.8.19.

	* lisp/gnus.el: Add autoload setting for
	`gnus-quote-arg-for-sh-or-csh'.

1998-09-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-insert-pseudos): Use
	`gnus-quote-arg-for-sh-or-csh' instead of `mm-quote-arg'.

	* lisp/nndoc.el (nndoc-possibly-change-buffer): Don't eval
	`mm-enable-multibyte'.
	* lisp/nnmbox.el (nnmbox-possibly-change-newsgroup): Ditto.

1998-09-25  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.022.

	* Sync up with Pterodactyl Gnus 0.32.

1998-09-24  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.021.

	* Sync up with Pterodactyl Gnus 0.31.

1998-09-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-make-user-agent): Add extended version
	number to Emacs/{VERSION} (e.g. "Emacs/20.3.90").

1998-09-22  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
