@@ -1,3 +1,7 @@
+1998-10-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/pop3-fma.el(pop3-fma-movemail): Bug fix.
+	
 1998-10-01  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* lisp/message.el: Fix my stupid changes.
